<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.program.presenter.payment.amount.AmountViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="@string/payment_label_amount" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".presenter.notifications.NotificationsFragment">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/payment_label_howMuchToAdd"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/cardNumberEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="0.00"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@={vm.amount}"
                android:textColor="?colorOnBackground"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTv"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_baseline_credit_card_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtitleTv"
                tools:ignore="ContentDescription" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:minWidth="140dp"
                android:enabled="@{vm.isEnable}"
                android:onClick="@{() -> vm.next()}"
                android:text="@string/general_button_continue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/subtitleTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/payment_label_addMoneyWith"
                android:textAppearance="?textAppearanceSubtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardNumberEt" />

            <TextView
                android:id="@+id/currencyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GBP"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintBottom_toBottomOf="@+id/cardNumberEt"
                app:layout_constraintStart_toStartOf="@+id/cardNumberEt"
                app:layout_constraintTop_toTopOf="@+id/cardNumberEt"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/bankNameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="STARLING BANK"
                android:textAppearance="?textAppearanceSubtitle1"
                app:layout_constraintEnd_toStartOf="@+id/changeBtn"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/cardInfoTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:alpha="0.5"
                android:text="@{vm.cardInfo}"
                android:textAppearance="?textAppearanceSubtitle1"
                app:layout_constraintEnd_toStartOf="@+id/changeBtn"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/bankNameTv"
                tools:text="VISA * 0123" />

            <Button
                android:id="@+id/changeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/general_button_change"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <View
                android:id="@+id/dividerV"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:alpha="0.4"
                android:background="?colorOnBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardInfoTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>